Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8185451/MisleadingVarArgsErrorMsgTest.out
MisleadingVarArgsErrorMsgTest.java:19:16: compiler.err.cant.apply.symbol: kindname.method, f, int[], int, kindname.class, MisleadingVarArgsErrorMsgTest.B, (compiler.misc.no.conforming.assignment.exists: (compiler.misc.inconvertible.types: int, int[]))
1 error
